# express/controller/index.js
@@ -14,4 +14,12 @@ module.exports = {
     getEmployeeById: require('./employeeController').getEmployeeById,
     deleteEmployeeById: require('./employeeController').deleteEmployeeById,
     updateEmployee: require('./employeeController').updateEmployee,
+    
+    //Organization Controller
+    locationSave: require('./organizationController').locationSave,
+    getLocation: require('./organizationController').getLocation,
+    getLocationById: require('./organizationController').getLocationById,
+    getLocationByCompany: require('./organizationController').getLocationByCompany,
+    deleteLocationById: require('./organizationController').deleteLocationById,
+    updateLocation: require('./organizationController').updateLocation,
 }
